# CUDA_Solver

./: CMakeLists.txt  README.md  main.cpp  solver.cu  solver.h
